[gd_scene load_steps=16 format=2]

[ext_resource path="res://Objects/MovableObject/MovableObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Player1.png" type="Texture" id=3]
[ext_resource path="res://Player/Player2.png" type="Texture" id=4]
[ext_resource path="res://Player/Z.png" type="Texture" id=5]
[ext_resource path="res://Player/Step6.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "sleeping",
"speed": 5.0
} ]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0382883, 0.0570893 ), 0.0, 0.0, 0, 0, Vector2( 0.653904, 1 ), 0.0, 1.13928, 0, 0, Vector2( 1, 0 ), -3.39204, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=3]
min_value = -15.0
max_value = 15.0
_data = [ Vector2( 0.0172673, 15 ), 0.0, 0.0, 0, 0, Vector2( 1, -14.8915 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, -16, 0 )
angular_velocity = 16.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel_curve = SubResource( 4 )
scale = 0.5
scale_curve = SubResource( 6 )

[sub_resource type="Animation" id=9]
resource_name = "Idle"
length = 5.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("MovableObject/GridObject/Content:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MovableObject/GridObject/Content:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.95, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 5 )
}

[sub_resource type="Animation" id=7]
resource_name = "Move"
tracks/0/type = "bezier"
tracks/0/path = NodePath("MovableObject/GridObject/Content:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MovableObject/GridObject/Content:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.7, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MovableObject/GridObject/Content/AnimatedSprite:offset:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MovableObject/GridObject/Content/AnimatedSprite:offset:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("MovableObject/GridObject/Content:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MovableObject/GridObject/Content:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MovableObject/GridObject/Content:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MovableObject/GridObject/Content:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MovableObject/GridObject/Content/AnimatedSprite:offset:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("MovableObject/GridObject/Content/AnimatedSprite:offset:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("MovableObject/GridObject/Content/AnimatedSprite:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("MovableObject/GridObject/Content/AnimatedSprite:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Player" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MovableObject" parent="." instance=ExtResource( 1 )]
walkable = false
pushable = true
pickable = false
is_walker = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="MovableObject/GridObject/Content" index="0"]
position = Vector2( 0, -8 )
frames = SubResource( 1 )
centered = false
offset = Vector2( -8, -8 )

[node name="Camera2D" type="Camera2D" parent="MovableObject"]
current = true
zoom = Vector2( 0.3, 0.3 )
limit_left = -80
limit_top = -80
limit_right = 592
limit_bottom = 400
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.01
drag_margin_top = 0.01
drag_margin_right = 0.01
drag_margin_bottom = 0.01
editor_draw_drag_margin = true
__meta__ = {
"_edit_lock_": true
}

[node name="SleepingParticle" type="Particles2D" parent="MovableObject"]
position = Vector2( 8, -8 )
emitting = false
amount = 2
lifetime = 1.5
speed_scale = 0.75
process_material = SubResource( 2 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CameraTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 6.67
anims/Idle = SubResource( 9 )
anims/Move = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="MovableObject"]
